fixed navbar active

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Elvedin, a frontend developer based in Munich, Germany. Explore my portfolio to see my web development projects and expertise in creating seamless, high-quality web experiences. Get in touch for collaborations."
     />
     <!-- google fonts -->
     <link
